--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,8 @@
 <div class="container my-4">
     <div class="section">
     <div class="container mt-5">
+        <img src="asserts/img/devops.jpg" class="img-fluid rounded shadow-sm mb-4" alt="Project Dashboard Screenshot">
+
         <h2 class="text-center mb-4">Land Management System</h2>
 
         <div class="text-center mb-4">
